# deep_research

./: # 目标.ini  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  extensions_config.json  langgraph.json  main.py  memory.json  pyproject.toml  test_ds.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/workspace/: layout.tsx  page.tsx
frontend/components/: providers.tsx  theme-provider.tsx
frontend/components/workspace/: ChatInput.tsx  MarkdownRenderer.tsx  MessageItem.tsx  MessageList.tsx  PubMedResult.tsx  Sidebar.tsx  SkillsPanel.tsx  ToolCallDisplay.tsx  ToolResultRenderer.tsx  WebSearchResult.tsx
frontend/core/api/: api-client.ts
frontend/core/config/: index.ts
frontend/core/models/: types.ts
frontend/core/skills/: hooks.ts
frontend/core/threads/: hooks.ts  stream.ts
medical_agent/: graph.py  schema.py  search_engine.py  subagent_graph.py
medical_agent/nodes/: planning.py  subagent.py  synthesis.py
src/: factory.py  state.py
src/agents/lead_agent/: __init__.py  agent.py  graph.py  middleware.py  nodes.py  skills.py
src/community/: __init__.py
src/community/jina_ai/: __init__.py  tools.py
src/community/pubmed/: __init__.py  tools.py
src/gateway/: __init__.py  app.py
src/mcp/: __init__.py  client.py
src/sandbox/: __init__.py  base.py  local.py  tools.py
src/subagents/: __init__.py  pool.py  tools.py
(+8 files in other folders)
